<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - Niklas Baudy, Ruben Gees, Mario Đanić and contributors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
  <string name="app_name">Emoji</string>
  <string name="variant_group_title">Emoji Variant</string>
  <string name="variant_ios_title">Ios</string>
  <string name="variant_google_title">Google</string>
  <string name="variant_google_compat_title">GoogleCompat</string>
  <string name="variant_twitter_title">Twitter</string>
  <string name="show_dialog_title">Show Dialog</string>
  <string name="force_emojis_only">Force EmojisE only</string>
</resources>
