<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - Niklas Baudy, Ruben Gees, Mario Đanić and contributors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMainShowDialog"
        android:icon="@drawable/ic_message"
        android:title="@string/show_dialog_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menuMainSearchOption"
        android:icon="@drawable/ic_swap"
        android:title="@string/variant_group_title"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/menuMainVariantIos"
                    android:title="@string/variant_ios_title"/>
                <item
                    android:id="@+id/menuMainGoogle"
                    android:title="@string/variant_google_title"/>
                <item
                    android:id="@+id/menuMainGoogleCompat"
                    android:title="@string/variant_google_compat_title"/>
                <item
                    android:id="@+id/menuMainTwitter"
                    android:title="@string/variant_twitter_title"/>
            </group>
        </menu>
    </item>
</menu>
